# storage/pkg/gen/restapi/operations/schedules/get_courses_responses.go
@@ -1,163 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package schedules
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/amadeusitgroup/miniapp/storage/pkg/gen/models"
-)
-
-// GetCoursesOKCode is the HTTP code returned for type GetCoursesOK
-const GetCoursesOKCode int = 200
-
-/*GetCoursesOK list of courses (routes)
-
-swagger:response getCoursesOK
-*/
-type GetCoursesOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload []*models.Course `json:"body,omitempty"`
-}
-
-// NewGetCoursesOK creates GetCoursesOK with default headers values
-func NewGetCoursesOK() *GetCoursesOK {
-
-	return &GetCoursesOK{}
-}
-
-// WithPayload adds the payload to the get courses o k response
-func (o *GetCoursesOK) WithPayload(payload []*models.Course) *GetCoursesOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get courses o k response
-func (o *GetCoursesOK) SetPayload(payload []*models.Course) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetCoursesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		payload = make([]*models.Course, 0, 50)
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
-
-// GetCoursesBadRequestCode is the HTTP code returned for type GetCoursesBadRequest
-const GetCoursesBadRequestCode int = 400
-
-/*GetCoursesBadRequest generic error response
-
-swagger:response getCoursesBadRequest
-*/
-type GetCoursesBadRequest struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetCoursesBadRequest creates GetCoursesBadRequest with default headers values
-func NewGetCoursesBadRequest() *GetCoursesBadRequest {
-
-	return &GetCoursesBadRequest{}
-}
-
-// WithPayload adds the payload to the get courses bad request response
-func (o *GetCoursesBadRequest) WithPayload(payload *models.Error) *GetCoursesBadRequest {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get courses bad request response
-func (o *GetCoursesBadRequest) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetCoursesBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(400)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*GetCoursesDefault generic error response
-
-swagger:response getCoursesDefault
-*/
-type GetCoursesDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetCoursesDefault creates GetCoursesDefault with default headers values
-func NewGetCoursesDefault(code int) *GetCoursesDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &GetCoursesDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the get courses default response
-func (o *GetCoursesDefault) WithStatusCode(code int) *GetCoursesDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the get courses default response
-func (o *GetCoursesDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the get courses default response
-func (o *GetCoursesDefault) WithPayload(payload *models.Error) *GetCoursesDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get courses default response
-func (o *GetCoursesDefault) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetCoursesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
