# storage/pkg/gen/restapi/operations/schedules/get_schdules_responses.go
@@ -1,163 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package schedules
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/amadeusitgroup/miniapp/storage/pkg/gen/models"
-)
-
-// GetSchdulesOKCode is the HTTP code returned for type GetSchdulesOK
-const GetSchdulesOKCode int = 200
-
-/*GetSchdulesOK list of schedules
-
-swagger:response getSchdulesOK
-*/
-type GetSchdulesOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload []*models.Schedule `json:"body,omitempty"`
-}
-
-// NewGetSchdulesOK creates GetSchdulesOK with default headers values
-func NewGetSchdulesOK() *GetSchdulesOK {
-
-	return &GetSchdulesOK{}
-}
-
-// WithPayload adds the payload to the get schdules o k response
-func (o *GetSchdulesOK) WithPayload(payload []*models.Schedule) *GetSchdulesOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get schdules o k response
-func (o *GetSchdulesOK) SetPayload(payload []*models.Schedule) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetSchdulesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		payload = make([]*models.Schedule, 0, 50)
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
-
-// GetSchdulesBadRequestCode is the HTTP code returned for type GetSchdulesBadRequest
-const GetSchdulesBadRequestCode int = 400
-
-/*GetSchdulesBadRequest generic error response
-
-swagger:response getSchdulesBadRequest
-*/
-type GetSchdulesBadRequest struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetSchdulesBadRequest creates GetSchdulesBadRequest with default headers values
-func NewGetSchdulesBadRequest() *GetSchdulesBadRequest {
-
-	return &GetSchdulesBadRequest{}
-}
-
-// WithPayload adds the payload to the get schdules bad request response
-func (o *GetSchdulesBadRequest) WithPayload(payload *models.Error) *GetSchdulesBadRequest {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get schdules bad request response
-func (o *GetSchdulesBadRequest) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetSchdulesBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(400)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*GetSchdulesDefault generic error response
-
-swagger:response getSchdulesDefault
-*/
-type GetSchdulesDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetSchdulesDefault creates GetSchdulesDefault with default headers values
-func NewGetSchdulesDefault(code int) *GetSchdulesDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &GetSchdulesDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the get schdules default response
-func (o *GetSchdulesDefault) WithStatusCode(code int) *GetSchdulesDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the get schdules default response
-func (o *GetSchdulesDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the get schdules default response
-func (o *GetSchdulesDefault) WithPayload(payload *models.Error) *GetSchdulesDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get schdules default response
-func (o *GetSchdulesDefault) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetSchdulesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
