# storage/pkg/gen/restapi/operations/schedules/update_schedule_responses.go
@@ -1,0 +1,106 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package schedules
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/amadeusitgroup/miniapp/storage/pkg/gen/models"
+)
+
+// UpdateScheduleCreatedCode is the HTTP code returned for type UpdateScheduleCreated
+const UpdateScheduleCreatedCode int = 201
+
+/*UpdateScheduleCreated Updated Succesfully
+
+swagger:response updateScheduleCreated
+*/
+type UpdateScheduleCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Schedule `json:"body,omitempty"`
+}
+
+// NewUpdateScheduleCreated creates UpdateScheduleCreated with default headers values
+func NewUpdateScheduleCreated() *UpdateScheduleCreated {
+
+	return &UpdateScheduleCreated{}
+}
+
+// WithPayload adds the payload to the update schedule created response
+func (o *UpdateScheduleCreated) WithPayload(payload *models.Schedule) *UpdateScheduleCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update schedule created response
+func (o *UpdateScheduleCreated) SetPayload(payload *models.Schedule) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateScheduleCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateScheduleBadRequestCode is the HTTP code returned for type UpdateScheduleBadRequest
+const UpdateScheduleBadRequestCode int = 400
+
+/*UpdateScheduleBadRequest invalid id
+
+swagger:response updateScheduleBadRequest
+*/
+type UpdateScheduleBadRequest struct {
+}
+
+// NewUpdateScheduleBadRequest creates UpdateScheduleBadRequest with default headers values
+func NewUpdateScheduleBadRequest() *UpdateScheduleBadRequest {
+
+	return &UpdateScheduleBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *UpdateScheduleBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// UpdateScheduleNotFoundCode is the HTTP code returned for type UpdateScheduleNotFound
+const UpdateScheduleNotFoundCode int = 404
+
+/*UpdateScheduleNotFound schedule not found
+
+swagger:response updateScheduleNotFound
+*/
+type UpdateScheduleNotFound struct {
+}
+
+// NewUpdateScheduleNotFound creates UpdateScheduleNotFound with default headers values
+func NewUpdateScheduleNotFound() *UpdateScheduleNotFound {
+
+	return &UpdateScheduleNotFound{}
+}
+
+// WriteResponse to the client
+func (o *UpdateScheduleNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
